[gd_scene load_steps=3 format=3 uid="uid://dpqgqrfoqchlu"]

[ext_resource type="Script" path="res://scripts/district.gd" id="1_0s8ny"]
[ext_resource type="Texture2D" uid="uid://cuyfkmlgcpdhb" path="res://assets/city.svg" id="2_yncyt"]

[node name="District_CW" type="Area2D"]
script = ExtResource("1_0s8ny")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(800, 450)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_yncyt")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
top_level = true
polygon = PackedVector2Array(427, 225, 451, 245, 474, 277, 513, 317, 554, 361, 591, 389, 623, 397, 656, 424, 633, 455, 607, 471, 550, 488, 502, 497, 423, 491, 323, 484, 277, 477, 183, 482, 109, 344, 107, 192, 127, 174, 192, 232, 340, 286)

[node name="Polygon2D" type="Polygon2D" parent="."]

[node name="FocusPoint" type="Node2D" parent="."]
position = Vector2(361, 385)

[node name="pois" type="Node2D" parent="."]
visible = false

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
